--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                <a href="" class="button">Explore Travel<i class="ri-arrow-right-line"></i></a>
             </div>
             <div class="about__image">
-               <img src="assets/img/about-beach.jpg" alt="about image" class="about__img">
+               <img src="assets/img/ghat_1.jpg" alt="about image" class="about__img">
                <div class="about__shadow"></div>
             </div>
          </div>
@@ -129,35 +129,35 @@
          <div class="popular__container container grid">
             <article class="popular__card">
                <div class="popular__image">
-                  <img src="assets/img/popular-mountain.jpg" alt="" class="popular__img">
+                  <img src="assets/img/bsb_1.jpg" alt="" class="popular__img">
                   <div class="popular__shadow"></div>
                </div>
-               <h2 class="popular__title"></h2>
+               <h2 class="popular__title">Varanasi Ghats</h2>
                <div class="popular__location">
                   <i class="ri-map-pin-line"></i>
-                  <span>Canada</span>
+                  <span>Uttar Pradesh</span>
                </div>
             </article>
             <article class="popular__card">
                <div class="popular__image">
-                  <img src="assets/img/popular-forest.jpg" alt="" class="popular__img">
+                  <img src="assets/img/kalsu_1.jpg" alt="" class="popular__img">
                   <div class="popular__shadow"></div>
                </div>
-               <h2 class="popular__title">Spike Forest</h2>
+               <h2 class="popular__title">Kalsubai Peak</h2>
                <div class="popular__location">
                   <i class="ri-map-pin-line"></i>
-                  <span>Ireland</span>
+                  <span>Maharashtra</span>
                </div>
             </article>
             <article class="popular__card">
                <div class="popular__image">
-                  <img src="assets/img/popular-lake.jpg" alt="" class="popular__img">
+                  <img src="assets/img/amb.jpg" alt="" class="popular__img">
                   <div class="popular__shadow"></div>
                </div>
-               <h2 class="popular__title">Garda Lake</h2>
+               <h2 class="popular__title">Ambarnath</h2>
                <div class="popular__location">
                   <i class="ri-map-pin-line"></i>
-                  <span>Italy</span>
+                  <span>Maharashtra</span>
                </div>
             </article>
          </div>
@@ -204,7 +204,7 @@
                </form>
             </div>
             <div class="join__image">
-               <img src="assets/img/join-island.jpg" alt="" class="join__img">
+               <img src="assets/img/irshalgad.jpg" alt="" class="join__img">
                <div class="join__shadow"></div>
             </div>
          </div>
